# Silent-Face-Anti-Spoofing-APK

./: LICENSE  README.md  build.gradle  key.jks  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
engine/: .gitignore  build.gradle  consumer-rules.pro
engine/src/main/cpp/: CMakeLists.txt  android_log.h  definition.h  face_detector_jni.cpp  img_process.cpp  img_process.h  jni_long_field.h  live_jni.cpp
engine/src/main/cpp/detection/: face_detector.cpp  face_detector.h
engine/src/main/cpp/include/ncnn/: allocator.h  blob.h  cpu.h  datareader.h  layer.h  layer_shader_type.h  layer_type.h  layer_type_enum.h  mat.h  modelbin.h  net.h  option.h  paramdict.h  pipeline.h  platform.h
engine/src/main/cpp/include/opencv/: cv.h
engine/src/main/cpp/include/opencv2/: cvconfig.h
engine/src/main/cpp/include/opencv2/core/cuda/: block.hpp  color.hpp  common.hpp  filters.hpp  limits.hpp  reduce.hpp  scan.hpp  utility.hpp  vec_math.hpp  warp.hpp
engine/src/main/cpp/include/opencv2/core/cuda/detail/: color_detail.hpp  reduce.hpp  reduce_key_val.hpp  transform_detail.hpp  type_traits_detail.hpp  vec_distance_detail.hpp
engine/src/main/cpp/include/opencv2/core/hal/: hal.hpp  interface.h  intrin.hpp  intrin_cpp.hpp  intrin_neon.hpp  intrin_sse.hpp  intrin_vsx.hpp
engine/src/main/cpp/include/opencv2/dnn/: all_layers.hpp  dict.hpp  dnn.hpp  dnn.inl.hpp  layer.details.hpp  layer.hpp  shape_utils.hpp
engine/src/main/cpp/include/opencv2/ml/: ml.inl.hpp
engine/src/main/cpp/live/: live.cpp  live.h
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
